tests/codegen/pass/012-min-max-float-simple.hyg
assert(max(42.0f, 12.0f) = 42.0f);
assert(min(42.0f, 12.0f) = 12.0f)